# NovationDriver

./: .gitignore  CMakeLists.txt
Launchpad/: CMakeLists.txt
Launchpad/includes/: HandlingMidiEventsTutorial.h  LaunchpadBroadcaster.h  LaunchpadComponent.h  LaunchpadDriver.h  LaunchpadLayout.h  VstProcessor.h  VstProcessorEditor.h
Launchpad/source/: LaunchpadBroadcaster.cpp  LaunchpadComponent.cpp  LaunchpadDriver.cpp  LaunchpadLayout.cpp  Main.cpp  VstProcessor.cpp  VstProcessorEditor.cpp
Tests/: CMakeLists.txt  SimpleTests.cpp  test.cpp
